--- a/index.css
+++ b/index.css
@@ -69,15 +69,22 @@ body {
 .calculator-wrapper h1 {
   font-family: Hasklug, 'AnteriSignature';  
   font-weight: 800;
-  font-size: 4em;
+  font-size: 4rem;
+  padding: 0.1em 0.5em;
   margin-bottom: 0.5em;
   text-transform: uppercase;
   color: transparent;
   text-shadow: 1px 1px 1px #3d3c3ce7, 1px 2px 1px #3d3c3ce7, 1px 3px 1px #3d3c3ce7, 1px 4px 1px #3d3c3ce7, 1px 5px 1px #3d3c3ce7, 1px 6px 1px #3d3c3ce7, 1px 7px 1px #fff, 1px 8px 1px #fff, 1px 9px 1px #3d3c3ce7, 1px 10px 1px #3d3c3ce7, 1px 18px 6px rgba(16, 16, 16, 0.5);
 }
 
+@media (max-width: 656px) {
+    .calculator-wrapper h1 {
+        font-size: 3rem;
+    }
+}
+
 .calculator-container {
-    width: min(300px, 70%);
+    width: min(300px, 80%);
     margin: 0 20px;
     background: #262626 !important;
     border-radius: 5px;
@@ -87,8 +94,8 @@ body {
     box-shadow: inset 0 20px 10px 1px rgba(256,256,256,0.75);
 }
 
-.calculator-container::before,
-.calculator-container::after {
+.calculator-wrapper::before,
+.calculator-wrapper::after {
     content: "";
     position: absolute;
     inset: 0;
