--- a/index.css
+++ b/index.css
@@ -59,20 +59,30 @@ body {
     background: #507466d8;
 }
 
+main {
+    outline: red solid;
+    width: min(450px, 80%);
+    margin: 0 auto;
+    padding: 0 0.1em;
+}
+
 .calculator-wrapper {
     display: grid;
     place-items: center;
-    padding: 1em;
+    padding: 0.5em 0;
 }
+
 
 
 .calculator-wrapper h1 {
   font-family: Hasklug, 'AnteriSignature';  
   font-weight: 800;
   font-size: 4rem;
+  text-transform: uppercase;
+
   padding: 0.1em 0.5em;
   margin-bottom: 0.5em;
-  text-transform: uppercase;
+
   color: transparent;
   text-shadow: 1px 1px 1px #3d3c3ce7, 1px 2px 1px #3d3c3ce7, 1px 3px 1px #3d3c3ce7, 1px 4px 1px #3d3c3ce7, 1px 5px 1px #3d3c3ce7, 1px 6px 1px #3d3c3ce7, 1px 7px 1px #fff, 1px 8px 1px #fff, 1px 9px 1px #3d3c3ce7, 1px 10px 1px #3d3c3ce7, 1px 18px 6px rgba(16, 16, 16, 0.5);
 }
@@ -86,9 +96,10 @@ body {
 .calculator-container {
     width: min(300px, 80%);
     margin: 0 20px;
-    background: #262626 !important;
     border-radius: 5px;
     margin-right: 1rem;
+    
+    background: #262626 !important;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(256,256,256,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(256,256,256,0.75);
     box-shadow: inset 0 20px 10px 1px rgba(256,256,256,0.75);
@@ -128,28 +139,30 @@ body {
 
 .calculator-screen {
     display: flex;
-    /* place-items: center; */
+    min-height: 100px;
+
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    background: #fff;
     padding: 1em;
-    min-height: 100px;
-    width: 100%;
+
     text-align: right;
     font-family: Hasklug, 'Roboto', sans-serif;
+
+    background: #fff;
     -webkit-box-shadow: inset 0 0 5px 5px rgba(0,0,0,0.75);
     -moz-box-shadow: inset 0 0 5px 5px rgba(0,0,0,0.75);
     box-shadow: inset 0 0 5px 5px rgba(0,0,0,0.75);
 }
 
 .screen-display {
+    width: 100%;
     margin: auto;
+    min-height: 50%;
+
     font-size: 2rem;
     color: #000;
-    font-weight: 800;
-    width: 100%;
-    min-height: 50%;
     overflow-wrap: break-word;
+    font-weight: 800;
     word-wrap: break-word;
 }
 
@@ -167,16 +180,17 @@ body {
 .calculator-keys button {
     cursor: pointer;
     border: none;
+    border-radius: 10px;
     margin: auto;
     font-family: Hasklug, 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 1.3rem;
-    background: white;
-    box-shadow: -3px -2px 2px #000, -2px -2px 2px #000, -1px -2px 2px #000, 0 -2px 2px #000, 1px 2px 2px #000, 2px 3px 2px #000, 3px 4px 2px #000, 4px 5px 2px #000, 5px 6px 2px #000, 6px 7px 2px #000;
     padding: 1rem;
     color: #000;
-    border-radius: 10px;
     text-align: center;
+
+    background: white;
+    box-shadow: -3px -2px 2px #000, -2px -2px 2px #000, -1px -2px 2px #000, 0 -2px 2px #000, 1px 2px 2px #000, 2px 3px 2px #000, 3px 4px 2px #000, 4px 5px 2px #000, 5px 6px 2px #000, 6px 7px 2px #000;
     transition: 1ms ease-in-out;
     
 }
