--- a/index.css
+++ b/index.css
@@ -59,17 +59,33 @@ body {
     background: #507466d8;
 }
 
-main {
+.calculator {
     outline: red solid;
-    width: min(450px, 80%);
+    display: grid;
+    place-items: center;
+    width: 90%;
     margin: 0 auto;
-    padding: 0 0.1em;
+    
 }
 
 .calculator-wrapper {
+    position: absolute;
+
     display: grid;
     place-items: center;
-    padding: 0.5em 0;
+    
+    /* width: 90%; */
+    max-width: 500px;
+
+    /* padding: 0.5em 0; */
+    top: 2.5%;
+    /* left: auto;
+    right: auto;
+    padding: 1em; */
+
+    
+    
+    outline: rgb(241, 240, 240) solid;
 }
 
 
@@ -77,8 +93,9 @@ main {
 .calculator-wrapper h1 {
   font-family: Hasklug, 'AnteriSignature';  
   font-weight: 800;
-  font-size: 4rem;
+  font-size: 3rem;
   text-transform: uppercase;
+  text-align: center;
 
   padding: 0.1em 0.5em;
   margin-bottom: 0.5em;
@@ -87,17 +104,20 @@ main {
   text-shadow: 1px 1px 1px #3d3c3ce7, 1px 2px 1px #3d3c3ce7, 1px 3px 1px #3d3c3ce7, 1px 4px 1px #3d3c3ce7, 1px 5px 1px #3d3c3ce7, 1px 6px 1px #3d3c3ce7, 1px 7px 1px #fff, 1px 8px 1px #fff, 1px 9px 1px #3d3c3ce7, 1px 10px 1px #3d3c3ce7, 1px 18px 6px rgba(16, 16, 16, 0.5);
 }
 
-@media (max-width: 656px) {
+@media (max-width: 350px) {
     .calculator-wrapper h1 {
-        font-size: 3rem;
+        font-size: 1.5rem;
+    }
+
+    .calculator-container {
+        width: 100%;
     }
 }
 
 .calculator-container {
-    width: min(300px, 80%);
-    margin: 0 20px;
+    width: min(300px, 90%);
     border-radius: 5px;
-    margin-right: 1rem;
+    margin: 0 auto;
     
     background: #262626 !important;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(256,256,256,0.75);
@@ -105,8 +125,8 @@ main {
     box-shadow: inset 0 20px 10px 1px rgba(256,256,256,0.75);
 }
 
-.calculator-wrapper::before,
-.calculator-wrapper::after {
+.calculator::before,
+.calculator::after {
     content: "";
     position: absolute;
     inset: 0;
@@ -195,6 +215,22 @@ main {
     
 }
 
+@media (max-width: 350px) {
+
+    .calculator-keys{
+        grid-gap: 0.5em;
+    }
+    /* .calculator-keys button {
+        box-shadow:  -1px -2px 2px #000, 0 -2px 2px #000, 1px 2px 2px #000, 2px 3px 2px #000;
+    }
+
+    .calculator-keys button:hover {
+        box-shadow: -3px -2px 2px #000, -2px -2px 2px #000, -1px -2px 2px #000, 0 -2px 2px #000, 1px 2px 2px #000, 2px 3px 2px #000, 3px 4px 2px #000;
+        animation: sparkle 0.3s alternate infinite;
+    
+    } */
+}
+
 .operator.equal-key {
     background: rgb(141, 9, 20);
     color: #fff;
@@ -212,8 +248,7 @@ main {
 
 .calculator-keys button:hover {
     box-shadow: -3px -2px 2px #000, -2px -2px 2px #000, -1px -2px 2px #000, 0 -2px 2px #000, 1px 2px 2px #000, 2px 3px 2px #000, 3px 4px 2px #000, 4px 5px 2px #000, 5px 6px 2px #000, 6px 7px 2px #000;
-    animation: sparkle 0.3s
-      alternate infinite;
+    animation: sparkle 0.3s alternate infinite;
     
 }
 
